--- a/example2/templates/header.html
+++ b/example2/templates/header.html
@@ -1,16 +1,29 @@
-<nav class="navbar navbar-expand bg-body-tertiary">
+<nav class="navbar navbar-expand-sm bg-body-tertiary">
     <div class="container-fluid">
         <a href="/" class="navbar-brand">Website</a>
-        <div class="navbar-nav me-auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMe">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="toggleMe">
+            <div class="navbar-nav me-auto">
+                {% if current_user.is_authenticated %}
+                <a href="/dashboard" class="nav-link">Dashboard</a>
+                {% else %}
+                <a href="/login" class="nav-link">Login</a>
+                {% endif %}
+           </div>
+
             {% if current_user.is_authenticated %}
-            <a href="/dashboard" class="nav-link">Dashboard</a>
-            {% else %}
-            <a href="/login" class="nav-link">Login</a>
+            <div class="d-flex flex-sm-row flex-column gap-2">
+                <span class="text-white me-2 my-auto">
+                    <i class="bi bi-person-circle me-2"></i>
+                    {{current_user.username}}
+                </span>
+                <a href="/logout" class="btn btn-danger">Logout</a>
+            </div>
             {% endif %}
-       </div>
-        {% if current_user.is_authenticated %}
-        <span class="navbar-text me-2"><i class="bi bi-person-circle me-2"></i>{{current_user.username}}</span>
-        <a href="/logout" class="btn btn-danger">Logout</a>
-        {% endif %}
+
+        </div>
     </div>
 </nav>
